# lol-team-builder-backend

./: LICENSE  Makefile  README.rst  pyproject.toml
tests/: test_team_builder.py
