[tool.poetry]
name = "team-builder"
version = "0.1.0"
description = ""
authors = ["Axel Rechenberg"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
pydantic = "^1.6.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
